check_output_7.txt
cargo :     Checking mtt-file-manager v0.1.0 
(C:\MTT File Manager)
At line:1 char:1
+ cargo check --release 2>&1 | Out-File 
-FilePath check_output_7.txt -E ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  
      Checking mt...T File Manager):String) [  
  ], RemoteException
    + FullyQualifiedErrorId : NativeCommandErr 
   or
 
error[E0061]: this method takes 5 arguments 
but 4 arguments were supplied
    --> 
src\infrastructure\windows\native_menu.rs:97:31
     |
  97 |       let result = 
context_menu.GetCommandString(
     |  _______________________________^^^^^^^^
^^^^^^^^-
  98 | |         (cmd_id - 1) as usize,  // 
Offset by -1 as per QueryContextMenu
  99 | |         GCS_VERBA,
 100 | |         None,
 101 | |         &mut buffer,
     | |         ----------- expected `PSTR`, 
found `&mut [u8; 256]`
 102 | |     );
     | |_____- argument #5 of type `u32` is 
missing
     |
note: method defined here
    --> C:\Users\mtamu\.cargo\registry\src\inde
x.crates.io-1949cf8c6b5b557f\windows-0.58.0\src
\Windows\Win32\UI\Shell\mod.rs:8568:19
     |
8568 |     pub unsafe fn 
GetCommandString(&self, idcmd: usize, utype: 
u32, preserved: Option<*const u32>, pszname: 
windows_core::PSTR, cchmax: u...
     |                   ^^^^^^^^^^^^^^^^
help: provide the argument
     |
  97 ~     let result = 
context_menu.GetCommandString(
  98 +         (cmd_id - 1) as usize,
  99 +         GCS_VERBA,
 100 +         None,
 101 +         /* PSTR */,
 102 +         /* u32 */,
 103 ~     );
     |

error[E0308]: arguments to this function are 
incorrect
  --> src\ui\context_menu.rs:58:31
   |
58 |                 
.inner_margin(egui::Margin::symmetric(4.0, 
8.0))
   |                               
^^^^^^^^^^^^^^^^^^^^^^^ ---  --- expected 
`i8`, found floating-point number
   |                                           
            |
   |                                           
            expected `i8`, found 
floating-point number
   |
note: associated function defined here
  --> C:\Users\mtamu\.cargo\registry\src\index.
crates.io-1949cf8c6b5b557f\epaint-0.31.1\src\ma
rgin.rs:44:18
   |
44 |     pub const fn symmetric(x: i8, y: i8) 
-> Self {
   |                  ^^^^^^^^^

warning: use of deprecated method 
`eframe::egui::Frame::rounding`: Renamed to 
`corner_radius`
  --> src\ui\context_menu.rs:59:18
   |
59 |                 .rounding(MENU_ROUNDING)
   |                  ^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

error[E0308]: mismatched types
  --> src\ui\context_menu.rs:61:29
   |
61 |                     offset: 
egui::vec2(0.0, 2.0),
   |                             
^^^^^^^^^^^^^^^^^^^^ expected `[i8; 2]`, found 
`Vec2`

error[E0308]: mismatched types
  --> src\ui\context_menu.rs:62:27
   |
62 |                     blur: 8.0,
   |                           ^^^ expected 
`u8`, found floating-point number

error[E0308]: mismatched types
  --> src\ui\context_menu.rs:63:29
   |
63 |                     spread: 0.0,
   |                             ^^^ expected 
`u8`, found floating-point number

error[E0308]: arguments to this function are 
incorrect
   --> src\ui\context_menu.rs:263:35
    |
263 |                     
.inner_margin(egui::Margin::symmetric(4.0, 
8.0))
    |                                   
^^^^^^^^^^^^^^^^^^^^^^^ ---  --- expected 
`i8`, found floating-point number
    |                                          
                 |
    |                                          
                 expected `i8`, found 
floating-point number
    |
note: associated function defined here
   --> C:\Users\mtamu\.cargo\registry\src\index
.crates.io-1949cf8c6b5b557f\epaint-0.31.1\src\m
argin.rs:44:18
    |
 44 |     pub const fn symmetric(x: i8, y: i8) 
-> Self {
    |                  ^^^^^^^^^

warning: use of deprecated method 
`eframe::egui::Frame::rounding`: Renamed to 
`corner_radius`
   --> src\ui\context_menu.rs:264:22
    |
264 |                     
.rounding(MENU_ROUNDING)
    |                      ^^^^^^^^

Some errors have detailed explanations: E0061, 
E0308.
For more information about an error, try 
`rustc --explain E0061`.
warning: `mtt-file-manager` (lib) generated 2 
warnings
error: could not compile `mtt-file-manager` 
(lib) due to 6 previous errors; 2 warnings 
emitted
